[tool.poetry]
name = "auto-pr"
version = "1.0.10"
description = "Perform bulk updates across repositories"
license = "Apache-2.0"

authors = ["GetYourGuide GmbH"]

readme = "README.md"
repository = "https://github.com/getyourguide/auto-pr"
homepage = "https://github.com/getyourguide/auto-pr"

packages = [
    { include = "autopr" },
]

[tool.poetry.scripts]
auto-pr = "autopr:main"

[tool.poetry.dependencies]
python = "^3.9"
marshmallow = "3.21.3"
marshmallow-dataclass = "8.6.1"
click = "8.1.7"
PyYAML = "6.0.1"
PyGithub = "2.6.1"
single-source = "0.4.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-socket = "*"
setuptools = "78.1.1"
wheel = "*"
pre-commit = "*"
coverage = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
