[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autopr"]

[project]
name = "auto-pr"
version = "1.2.0"
description = "Perform bulk updates across repositories"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "GetYourGuide GmbH"}]
requires-python = ">=3.9.2,<4.0"

dependencies = [
    "marshmallow==4.0.1",
    "marshmallow-dataclass==8.7.1",
    "click==8.1.8",
    "PyYAML==6.0.3",
    "PyGithub==2.8.1",
    "single-source==0.4.0",
    "cryptography>=45.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-socket>=0.7.0",
    "setuptools==80.9.0",
    "wheel>=0.44.0",
    "pre-commit>=4.0.0",
    "coverage>=7.0.0",
    "pytest-cov>=6.0.0",
]

[project.scripts]
auto-pr = "autopr:main"

[project.urls]
Homepage = "https://github.com/getyourguide/auto-pr"
Repository = "https://github.com/getyourguide/auto-pr"
